--- a/meey2/assets/css/style.css
+++ b/meey2/assets/css/style.css
@@ -40,13 +40,12 @@ section {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  overflow: hidden;
 }
 .banner .background-banner {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url(../img/banner-bagr.svg);
+  background-image: url(../img/img-bn-t.svg);
   background-position: center;
   background-size: cover;
   z-index: -3;
@@ -230,80 +229,6 @@ section {
   color: rgba(26, 75, 183, 1);
   font-weight: bold;
 }
-.nav.sticky .menu-mobile .bgr-ct {
-  filter: invert(0);
-}
-
-.menu-mobile {
-  display: none;
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-.menu-mobile.active-menu-mobile .bgr-ct {
-  background: url(../img/icon/close.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.menu-mobile .bgr-ct {
-  width: 100%;
-  height: 100%;
-  background: url(../img/icon/menu.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 30px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.menu-mb {
-  background: url(../img/footer.png);
-  background-size: cover;
-  background-position: center;
-  background-color: white;
-  width: 25%;
-  height: 100vh;
-  padding: 100px 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  right: -500px;
-  transition: all 0.3s linear;
-}
-.menu-mb li {
-  padding: 10px;
-  margin-bottom: 30px;
-  transition: all 0.3s linear;
-}
-.menu-mb li a {
-  color: #111;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-}
-.menu-mb li:hover {
-  transform: translateY(-10px);
-  background-color: #111;
-  transition: all 0.3s linear;
-}
-.menu-mb li:hover a {
-  color: #fff;
-  transition: all 0.3s linear;
-}
-.menu-mb.active-list {
-  right: 0px;
-  transition: all 0.3s linear;
-}
 /* big-image*/
 .banner .big-image-banner {
   position: absolute;
@@ -347,6 +272,9 @@ section {
 
 #ss1 .main-content {
   width: 100%;
+}
+.v-mobile {
+  display: none;
 }
 #ss1 .main-content .col {
   width: 50%;
@@ -474,7 +402,7 @@ section {
   padding-right: 10px;
 }
 #ss2 .main-content-cus .btn-more {
-  width: 25%;
+  width: 158px;
   margin-left: 60px;
   text-align: center;
   background-color: rgba(171, 136, 67, 1);
@@ -517,6 +445,7 @@ section {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  border-radius: 13px;
 }
 
 /* FUCTION--------------------------------------------------------- */
